--- a/README.rdoc
+++ b/README.rdoc
@@ -5,4 +5,4 @@ More details TBA.
 
 == Copyright
 
-Copyright (c) 2010 Zedkit. See LICENSE for details. http://zedkit.com.
+Copyright (c) 2010-2012 Zedkit. See LICENSE for details. http://zedkit.com.
